# ComsEngine

./: .gitignore  CMakeLists.txt  DOCS.md  DOCUMENTATION.md  LICENSE  README.md
app/: CMakeLists.txt  Main.cpp
base/: BitHelper.hpp  CMakeLists.txt  Component.cpp  Component.hpp  ComponentRef.hpp  Engine.cpp  Engine.hpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  EntityRef.hpp  ObjectPool.cpp  ObjectPool.hpp  System.cpp  System.hpp  Test.cpp  Test.hpp  TestObjects.cpp  TestObjects.hpp
data/: Camera.lua  Clock.lua  Cube.lua  Grid.lua  Load.lua  Many.lua  Other.lua  Single.lua  Start.lua  Test.lua
data/component/: Camera.lua  Clock.lua  Cube.lua  Empty.lua  Grid.lua
data/shader/: Fragment.gls  Vertex.gls
default/: CMakeLists.txt  Cube.hpp  CubeTest.cpp  CubeTest.hpp  Hierarchy.cpp  Hierarchy.hpp  Identification.cpp  Identification.hpp  Identifier.hpp  Input.cpp  Input.hpp  Mesh.hpp  Physics.hpp  Renderer.cpp  Renderer.hpp  Transform.hpp  Velocity.hpp
docs/: README.md  all.html  console.html  custom.html  engine.html  entity.html  example.html  identifier.html  input.html  mesh.html  navigator.html  quat.html  script.html  style.css  transform.html  vec2.html  vec3.html  vec4.html
main/: CMakeLists.txt  Main.cpp
script/: Binder.cpp  Binder.hpp  CMakeLists.txt  EngineBind.hpp  EntityBind.hpp  Hierarchy.hpp  Identification.cpp  Identification.hpp  IdentificationBind.hpp  Identifier.hpp  IdentifierBind.hpp  InputBind.hpp  LuaTypes.hpp  MeshBind.hpp  Physics.cpp  QuatBind.hpp  Renderer.hpp  Script.hpp  ScriptBind.hpp  Scripting.cpp  Scripting.hpp  StaticEngine.cpp  StaticEngine.hpp  TransformBind.hpp  Vec2Bind.hpp  Vec3Bind.hpp  Vec4Bind.hpp  VecBind.hpp
test/: Audio.hpp  CMakeLists.txt  Collider.hpp  Common.cpp  Common.hpp  ContainerTest.cpp  Main.cpp  Material.hpp  Mesh.hpp  ObjectPoolTest.cpp  Physics.cpp  Physics.hpp  Renderer.cpp  Renderer.hpp  RigidBody.hpp  Sound.cpp  Sound.hpp  SystemTest.cpp  TestComponent.hpp  TestHelper.cpp  TestHelper.hpp  TestUtils.cpp  TestUtils.hpp  Transform.hpp
